microservice/k8s/traefik-tcp-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: grpc-route
  namespace: default
spec:
  entryPoints:
    - grpc
  routes:
    - match: HostSNI(`*`)
      services:
        - name: user-grpc
          port: 50051
  tls:
    secretName: grpc-tls
